--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Jason's Portfolio</h1>
     <h2>Web development portfolio</h2>
     <hr>
-    <a href="movie ranking.html">Movie Ranking<br><img src="../assets/images/movie ranking.png" height="200"></a>
-    <a href="willowsbirthday.html">Birthday Invite<br><img src="../assets/images/birthday-invite.png" height="200"></a>
+    <a href="movie ranking.html">Movie Ranking<br><img src="./movie ranking.png" height="200"></a>
+    <a href="willowsbirthday.html">Birthday Invite<br><img src="./birthday-invite.png" height="200"></a>
     <hr>
     <a href="contact.html">Contact</a>
 </body>
