--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Web development portfolio</h2>
     <hr>
     <a href="movie ranking.html">Movie Ranking<br><img src="./movie ranking.png" height="200"></a>
-    <a href="willowsbirthday.html">Birthday Invite<br><img src="./willowsbirthday.png" height="200"></a>
+    <a href="willowsbirthday.html">Birthday Invite<br><img src="./Willows birthday.png" height="200"></a>
     <hr>
     <a href="contact.html">Contact</a>
 </body>
